# src/api.yml
@@ -169,15 +169,28 @@ paths:
         '200':
           description: Success
   /camera_still:
+    post:
+      operationId: api.post_camera_still
+      tags:
+        - dev
+      summary: Grabs a frame from camera and saves on server
+      description: Returns 200
+      responses:
+        '200':
+          description: Create capture.jpg
     get:
       operationId: api.get_camera_still
       tags:
         - dev
-      summary: Grabs a frame from camera
-      description: Returns 200
+      summary: Grabs a frame from camera and returns it in response
       responses:
         '200':
-          description: A JSON array of packages and versions
+          description: capture.jpg
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
   /git:
     put:
       operationId: api.put_git_pull
